--- a/index.html
+++ b/index.html
@@ -1,25 +1,54 @@
-<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Document</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <style>
+            * {
+                font-family: 'Poppins', sans-serif;
+                font-size: medium;
+                color: #fff;
+                margin: 0;
+                padding: 0;
+            }
+
+            body {
+                background: #4e54c8;
+                /* fallback for old browsers */
+                background: -webkit-linear-gradient(to right, #8f94fb, #4e54c8);
+                /* Chrome 10-25, Safari 5.1-6 */
+                background: linear-gradient(to right, #8f94fb, #4e54c8);
+                /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            }
+        </style>
     </head>
     <body>
-        <div class="container">
-            <h1>&#x2728;Harry Potter Characters &#x2728;</h1>
-            <div id="searchWrapper">
-                <input
-                    type="text"
-                    name="searchBar"
-                    id="searchBar"
-                    placeholder="search for a character"
-                />
+        <nav>
+            <div class="container_index"></div>
+                <i class="fa fa-bars"></i>
+                <a href="#" class="nav-logo">LOGO</a>
+                <ul class="nav-ul">
+                    <li><a href="search_character.html" class="nav-link" target="_blank">Search Character</a></li>
+                    <li><a href="#" class="nav-link" target="_blank">Option 2</a></li>
+                    <li><a href="#" class="nav-link" target="_blank">Option 3</a></li>
+                    <li><a href="#" class="nav-link" target="_blank">Option 4</a></li>
+                </ul>
             </div>
-            <ul id="charactersList"></ul>
-        </div>
-        <script src="script.js"></script>
+        </nav>
+    
+        <header>
+            <h1>RESPONSIVE</h1>
+            <h1>NAVBAR</h1>
+        </header>
+        <script>
+            const burger = document.querySelector('i');
+            const target = document.querySelector('.nav-ul')
+
+            burger.addEventListener('click', ()=>{
+                target.classList.toggle('visible');})
+        </script>
     </body>
 </html>
