--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <a href="#" class="nav-logo">LOGO</a>
                 <ul class="nav-ul">
                     <li><a href="search_character.html" class="nav-link" target="_blank">Search Character</a></li>
-                    <li><a href="#" class="nav-link" target="_blank">Option 2</a></li>
-                    <li><a href="#" class="nav-link" target="_blank">Option 3</a></li>
+                    <li><a href="film.html" class="nav-link" target="_blank">Film</a></li>
+                    <li><a href="notebook.html" class="nav-link" target="_blank">Note Book</a></li>
                     <li><a href="#" class="nav-link" target="_blank">Option 4</a></li>
                 </ul>
             </div>
